<resources>
    <string name="app_name">BackgroundTaskScheduler</string>
    <string name="gps_interval">GPS Interval</string>
    <string name="seconds">(seconds)</string>
    <string name="_1">1</string>
    <string name="battery_interval">Battery Interval</string>

    <string name="data_capacity">Data Capacity</string>
    <string name="max_number_of_samples">(max number of samples)</string>
    <string name="_100">20</string>
    <string name="report_url">Report URL</string>
    <string name="eg_http">(eg. http://...)</string>
    <string name="https_google_com">https://google.com/</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="http_www_mocky_io_v2_5c23eaac3000002b007a5f0b">http://www.mocky.io/v2/5c23eaac3000002b007a5f0b</string>

</resources>
